# diarized-transcriber

./: .envrc  .gitignore  LICENSE  Makefile  README.md  config.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  sample-transcript.md  setup.py  test_diarization.py  transcribe_with_speakers.py
diarized_transcriber/: cli.py  diarization.py  html_exporter.py  json_exporter.py  markdown_exporter.py  rich_progress.py  srt_exporter.py
tests/: __init__.py  run_tests.py  test_markdown_exporter.py
whisper_podcast_transcriber/: cli.py  diarization.py  pdf_exporter.py  progress.py  txt_exporter.py
