[tool.poetry]
name = "diarized-transcriber"
version = "0.1.0"
description = "A CLI tool for audio transcription with speaker diarization and export to multiple formats."
authors = ["Evan Hourigan"]
license = "MIT"
readme = "README.md"
packages = [{ include = "diarized_transcriber" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
whisperx = { git = "https://github.com/m-bain/whisperX.git" }
pyannote_audio = { git = "https://github.com/pyannote/pyannote-audio.git" }
python-dotenv = "^1.0.0"
torch = ">=2.0.0"
fpdf = "^1.7.2"
rich = "^13.0.0"

[tool.poetry.scripts]
transcribe = "diarized_transcriber.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"